; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_sess.c_httpd_sess_trigger_close.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_sess.c_httpd_sess_trigger_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock_db = type { i32 }

@httpd_sess_close = common dso_local global i32 0, align 4
@ESP_ERR_NOT_FOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @httpd_sess_trigger_close(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.sock_db*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.sock_db* @httpd_sess_get(i32 %7, i32 %8)
  store %struct.sock_db* %9, %struct.sock_db** %6, align 8
  %10 = load %struct.sock_db*, %struct.sock_db** %6, align 8
  %11 = icmp ne %struct.sock_db* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @httpd_sess_close, align 4
  %15 = load %struct.sock_db*, %struct.sock_db** %6, align 8
  %16 = call i32 @httpd_queue_work(i32 %13, i32 %14, %struct.sock_db* %15)
  store i32 %16, i32* %3, align 4
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @ESP_ERR_NOT_FOUND, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %12
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local %struct.sock_db* @httpd_sess_get(i32, i32) #1

declare dso_local i32 @httpd_queue_work(i32, i32, %struct.sock_db*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
